se resuelven problemas de junit y se usa volumes en front

--- a/front/dxc/templates/dxc/index.html
+++ b/front/dxc/templates/dxc/index.html
@@ -1,5 +1,6 @@
 {% extends "dxc/base.html" %}
 {% block title %} Share a post {% endblock %}
 {% block content %}
-    ere {{ val }}
+    <br>
+    <h1>Trabajo del grupo 3 del diploma de DevOps</h1>
 {% endblock %}
