funcionando el formulario con los 3 pedidos

--- a/front/dxc/templates/dxc/retiro.html
+++ b/front/dxc/templates/dxc/retiro.html
@@ -19,9 +19,9 @@
     <br>
     <br>
     {% if answered %}
-    <h1> Sus resultados son: </h1>
-        {{ dxc }}
-        {{ tipo }}
+    <h1> {{ message }}</h1>
+    <br>
+    <div class="valor">{{ valor }} </div>
     {% endif %}
 {% endblock %}
 
