--- a/front/dxc/static/css/main.css
+++ b/front/dxc/static/css/main.css
@@ -554,3 +554,9 @@ input.input100 {
   font-size: 30px;
   max-width: 400px;
 }
+
+.valor {
+  font-size: 40px;
+  padding-left: 50px;
+  font-weight: bold;
+}
